增加Map和FlatMap对比

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@ under the License.
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.apache.flink</groupId>
-	<artifactId>examples</artifactId>
+	<artifactId>flink-study</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
